# wingo

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  NOTES.md  changelog.md  docker-compose.yml  handoff.md  plan.md  pyproject.toml
artifacts/: state.json
artifacts/gates/: p00.json  p01.json  p02.json  p03.json  p04.json  p04_timings.json  p06.json  p06_ext_timings.json  p06_timings.json  p07.json  p07_timings.json  p08.json  p08_timings.json  p09.json  p10.json
backend/: artifact_store.py  pipeline.py  tolerances.py
backend/airfoils/: metrics.py  naca.py  naca_thickness.py  resample.py  types.py  uiuc_ingest.py
backend/api/: main.py  schemas.py
backend/exporters/: mesh_export.py  step_export.py
backend/geometry/: airfoil_resolver.py  booleans.py  cove_profile.py  face_registry.py  false_spar.py  hinges_pin_tube.py  iml.py  interlock.py  kinematics.py  loft.py  midsurface.py  pi_joints.py  reference.py  ribs.py  sections.py  spar_trim.py  spars.py  te_cut.py
backend/schema/: db.py  db_models.py  errors.py  models.py  validators.py
backend/worker/: heartbeat.py  jobs.py  reaper.py  runner.py  sandbox.py
data/uiuc_snapshot/: README.md
docs/: conventions.md  gate_changes.md  known_issues.md
docs/decisions/: ADR-001-bolted-spar-retention.md  ADR-002-per-station-arc-cove-nose.md  ADR-003-single-arc-derived-axis.md  ADR-004-drop-le-droop.md  ADR-005-pin-and-tube-hinges.md
docs/kb/: INDEX.md  README.md  anti-unporting-overlap.md  cdb-blocked-format.md  coder-version-banner-benign.md  cs-nose-single-arc-derived-axis.md  face-naming-centroid-registry.md  fit-classes-not-unified.md  geometry-cache-architecture.md  geometry-shape-vs-solid-typing.md  hinge-axis-twist-radius-asymmetry.md  libgl-libxcursor-missing-workspace.md  memory-file-truthfulness.md  occ-boolean-shard-filter.md  occ-boolean-walltime-variance.md  occ-segfault-worker-sandbox.md  occ-shell-thicken-ban.md  occ-sweep-orientation-sampled-frames.md  occ-swept-volume-union-of-copies.md  occ-tangent-face-booleans.md  p0-validation-fail-fast-actionable.md  pi-joint-design-rules.md  (+7 more)
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
migrations/: env.py
report/: README.md
scripts/: export_viewer_data.py  kb_index.py  run_regress.py
(+167 files in other folders)
